more correctly center-align the secondary text

--- a/src/components/progress-flow/progress-flow-item/progress-flow-item.scss
+++ b/src/components/progress-flow/progress-flow-item/progress-flow-item.scss
@@ -141,8 +141,8 @@
 
 .seconday-text {
     font-size: pxToRem(12);
-    text-align: center;
     margin: auto;
+    padding-left: calc(var(--step-height) / 2);
 }
 
 .icon{
